# projeto-ml-pizza

./: README.md  app.py  modelo_pizza.pkl  pyproject.toml
