[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = "Descrição do projeto"
authors = ["Seu Nome <seu@email.com>"]

readme = "README.md"
packages = [{ include = "projeto_ml" }]  # Certifique-se de que essa pasta existe

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
joblib = ">=1.4.2,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
streamlit = ">=1.41.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"